<resources>
    <string name="app_name">Daily_Organized</string>

    <string name="week_of_2_27_22">Week of 2/27/22</string>

    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="description">Event Description</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="alert">Alert:</string>
    <string name="_2_22_22">2/22/22</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="settings">Settings</string>
    <string name="important">Important:</string>
    <string name="appearance">Appearance</string>
    <string name="account">Account</string>
    <string name="user123">User123</string>
    <string name="information_about_user">Information about user</string>
    <string name="logout">Logout</string>
    <string name="login_with_google_account">Login with Google Account</string>
    <string name="add">add</string>
    <string name="to_do_list">To Do List</string>
    <string name="back">back</string>
    <string name="todo_tast_example">todo tast example</string>
    <string name="add_to_do">Add To Do</string>
    <string name="save_to_do">Save To Do</string>
    <string name="remove">remove</string>
    <string name="done_list">Done List</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="login_page">Login Page</string>
    <string name="usernamecolon">Username:</string>
    <string name="passwordcolon">Password:</string>
    <string name="show_to_do">Show To Do</string>
    <string name="show_done">Show Done</string>
    <string name="dark_mode">Dark Mode:</string>

    <string-array name="tododone">
        <item>To Do</item>
        <item>Done</item>
    </string-array>

</resources>