<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appearance"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/appearance"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dark_mode"
        android:layout_width="200dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/dark_mode"
        android:textSize="35dp"
        app:layout_constraintEnd_toStartOf="@+id/dark_mode_checkbox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appearance" />

    <CheckBox
        android:id="@+id/dark_mode_checkbox"
        android:layout_width="99dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appearance" />

    <TextView
        android:id="@+id/account"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="224dp"
        android:gravity="center"
        android:text="@string/account"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/user123"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <TextView
        android:id="@+id/userinfo"
        android:layout_width="305dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/information_about_user"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="232dp"
        android:layout_height="75dp"
        android:layout_marginBottom="32dp"
        android:text="@string/logout"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>